--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>HTML Images</title>
   </head>
-  <body>
+<body>
     <!-- Your code here -->
-  </body>
-</html>
+ <img
+src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jp" alt="Nairobi's Oldest Lion">
+ <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Nairobi's Oldest Lion" title="mufasa">>
+ </body>
